# OllamaLink

./: .gitignore  build_mac.sh  build_win.bat  config.json  license.md  pyproject.toml  readme.md  requirements.txt  run_cli.py  run_gui.py  setup.py
core/: __init__.py  api.py  request.py  response.py  router.py  util.py
core/clients/: __init__.py  base_client.py  llamacpp_client.py  ollama_client.py  openrouter_client.py
core/handlers/: __init__.py  base_request_handler.py  base_response_handler.py  llamacpp_handlers.py  ollama_handlers.py  openrouter_handlers.py
electron-gui/: README.md  package-lock.json  package.json
electron-gui/src/: main.js  preload.js
electron-gui/src/renderer/: app.js  index.html  styles.css
